[gd_scene load_steps=11 format=2]

[ext_resource path="res://Hitbox.gd" type="Script" id=1]
[ext_resource path="res://SoundEffects/NewSounds/GrumbleFan1PaulstretchLoop.mp3" type="AudioStream" id=2]
[ext_resource path="res://Spells/LichSummon.gd" type="Script" id=3]
[ext_resource path="res://Spells/BloodBody.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 3.0

[sub_resource type="Gradient" id=3]
colors = PoolColorArray( 0.124023, 0.0029068, 0.0029068, 1, 0.670898, 0, 0.216208, 1 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
emission_shape = 1
emission_sphere_radius = 6.0
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = -80.0
scale = 2.0
color_ramp = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
emission_shape = 1
emission_sphere_radius = 0.01
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = 300.0
scale = 0.5
color = Color( 0.372549, 0.00392157, 0.00392157, 1 )

[sub_resource type="CircleShape2D" id=2]
radius = 8.0

[node name="LichSummon" type="Node2D" groups=["EnemyProjectile", "SpawnProjectile"]]
scale = Vector2( 3, 3 )
script = ExtResource( 3 )

[node name="BloodBody" type="KinematicBody2D" parent="." groups=["SpawnProjectile"]]
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BloodBody"]
shape = SubResource( 1 )

[node name="Trail" type="Particles2D" parent="."]
amount = 20
process_material = SubResource( 5 )

[node name="Trigger" type="Particles2D" parent="."]
emitting = false
amount = 50
lifetime = 0.8
one_shot = true
explosiveness = 1.0
process_material = SubResource( 6 )

[node name="Hitbox" type="Area2D" parent="."]
script = ExtResource( 1 )
damage = 2
is_player_attack = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 2 )

[node name="SummonProjectileSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
volume_db = 14.043
pitch_scale = 0.52
autoplay = true

[node name="Despawner" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="Dier" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="timeout" from="Despawner" to="." method="_on_Despawner_timeout"]
[connection signal="timeout" from="Dier" to="." method="_on_Dier_timeout"]
